--- a/task-element.html
+++ b/task-element.html
@@ -12,25 +12,55 @@
         --secondary-color: var(--secondary-color-task-element, #fff);
         --done-color: var(--done-color-task-element, #38E896);
         --cancelled-color: var(--cancelled-color-task-element, #E82C3F);
+        --width-element: var(--width-element-task-element, 200px);
       }
 
       .task-container {
         display: flex;
         flex-direction: column;
       }
+
       .element-item__title {
         margin-left: 5px;
       }
-      
+
       .task {
-        align-items: center;
+        width: var(--width-element);
         color: var(--primary-color);
         display: flex;
-        flex-grow: 1;
+        align-items: center;
         justify-content: flex-start;
       }
+
       .element-item__title {
         margin-left: 5px;
+      }
+
+      .done {
+        color: green;
+        text-decoration: line-through;
+      }
+
+      .canceled {
+        color: red;
+        text-decoration: line-through;
+      }
+
+      .btn {
+        background-color: var(--primary-color);
+        color: var(--secoundary-color);
+        width: 70px;
+        height: 30px;
+        border-radius: 5px;
+      }
+
+      .btn.done {
+        background-color: green;
+        text-decoration: none;
+      }
+
+      .cancel {
+        background-color: red;
       }
 
       @media(min-width: 600px) {
@@ -41,12 +71,27 @@
         }
       }
     </style>
+
     <div class="task-container">
-      <div class="task">
+
+
+      <div class$=[[status]]>
         <iron-icon icon="icons:radio-button-checked"></iron-icon>
         <h3 class="element-item__title">[[title]]</h3>
       </div>
+      <div class="buttons-set">
+        <template is="dom-if" if=[[^]]>
+          <button type="button" name="pending" on-click="onClickButton" class="btn pending">Pending</button>
+        </template>
+        <template is="dom-if" if=[[_showDone]]>
+          <button type="button" name="done" on-click="onClickButton" class="btn done">Done</button>
+        </template>
+        <template is="dom-if" if=[[_showCancel]]>
+          <button type="button" name="cancel" on-click="onClickButton" class="btn cancel">Cancel</button>
+        </template>
+      </div>
     </div>
+
   </template>
 
   <script>
@@ -62,11 +107,67 @@
       static get is() { return 'task-element'; }
       static get properties() {
         return {
+          key: String,
           title: {
             type: String,
             value: 'Tarea: colleja a ale'
+          },
+          done: {
+            type: Boolean,
+            value: false
+          },
+          canceled: {
+            type: Boolean,
+            value: false
+          },
+          status: {
+            type: String,
+            computed: 'getStatus(done, canceled)'
+          },
+          _showPending: {
+            type: Boolean,
+            value: false
+          },
+          _showDone: {
+            type: Boolean,
+            value: true
+          },
+          _showCancel: {
+            type: Boolean,
+            value: true
           }
         };
+      }
+
+      onClickButton(event) {
+        let eventName = event.target.name;
+        let myEvent = new CustomEvent(
+          eventName,
+          {
+            bubbles: true,
+            composed: true,
+            detail: {
+              key: this.key
+            }
+          }
+        );
+        this.dispatchEvent(myEvent);
+      }
+
+      getStatus(done, canceled) {
+        let result = 'task';
+        if (done) {
+          result +=' done';
+          this._showPending = true;
+          this._showDone = false;
+          this._showCancel = true;
+        } else if (canceled) {
+          result +=' canceled'
+          this._showPending = true;
+          this._showDone = true;
+          this._showCancel = false;
+        }
+        return result;
       }
     }
 
